# the-sieve

./: CLAUDE.md  Cargo.toml  README.md  STYLE_GUIDE.md  sample.md
.github/: RELEASE_BODY.md
.github/workflows/: release.yml
app/: Cargo.toml  tauri.conf.json
app/src/: lib.rs
app/ui/: index.html
modules/chaotic-caves-revised/: chaotic-caves-revised.md  chaotic-caves.ds
scripts/: build-modules.sh
src/: cli.rs  error.rs  lib.rs  main.rs
src/parser/: extensions.rs
src/renderer/: html.rs  mod.rs  pdf.rs  typst.rs
